# next-token-predictor

./: .gitignore  pyproject.toml
src/: __init__.py  cache.py  context_detection.py  latest_only.py  rate_limit.py  server.py  settings.py  singleflight.py  types.py  utils.py
src/api_clients/: gemini_client.py  openai_client.py  openrouter_client.py
src/post_processors/: remove_code_indicators.py  remove_math_indicators.py  remove_overlap.py  remove_whitespace.py
src/pre_processors/: dataview_remover.py  length_limiter.py  types_preproc.py
src/prediction_services/: inline_autocomplete.py
