[project]
name = "next-token-predictor"
version = "0.1.0"
description = "Async FastAPI autocomplete prediction service (OpenAI/OpenRouter)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.112",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "jinja2>=3.1",
]

